--- a/assets/styles/pagestyle.css
+++ b/assets/styles/pagestyle.css
@@ -16,7 +16,7 @@ nav a {
     cursor: pointer;
 }
 nav a:hover {
-    font-size: 45px;
+    font-size: 43px;
 }
 .selected {
     font-weight: bold;
@@ -78,6 +78,8 @@ h1 {               /* contents */
     top: 30%;          
     right: 22%;*/
     width: 85%;
+    margin-top: 0;
+    margin-bottom: 1%;
 }
 h2 {                        /*"Hi I'm Julia*/
     /*top: 480px;
@@ -85,21 +87,27 @@ h2 {                        /*"Hi I'm Julia*/
     font-family: 'Solway';
     color: #202421;
     font-size: 30px;
-    left: 60%;
+    margin-left: 1%;
+    margin-top: 2%;
+    margin-bottom: 1%;
 }
 p {
     font-family: 'Solway';
     color: #202421;
     font-size: 20px;
     width: 30%;
+    margin-left: 5%;
     text-align: left;
-    /* transform: translateX(38vw); */
+    margin-top: 2%;
+    margin-bottom: 1%;
 }
 .links {
     display: flex;
     flex-direction: row;
     width: 30%;
-    
+    margin-left: 1%;
+    margin-top: 2%;
+    margin-bottom: 1%;
 }
 #g, #p, #v {
     width: 60%;
